# -*- coding: utf-8 -*-
[metadata]
name = pyvib
package_name = pyvib
description = Pyvib: Python for system identification
long_descripton = file: README.org
author = Paw
author_email = pawsen@gmail.com
license = BSD 2-Clause
url = https://pyvib.readthedocs.io
edit_on_github = True
github_project = pawsen/pyvib
version = 1.0.dev

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
  numpy>=1.11
  scipy
  matplotlib>=1.3

[options.extras_require]
tests =
  pytest
  pytest-cov
docs =
  sphinx

[pycodestyle]
max_line_length = 80

[flake8]
#https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
ignore = E231,E226,E302,E41
max-line-length = 80

[bumpversion]
current_version = 0.2
commit = True
tag = True

[yapf]
column_limit = 80
dedent_closing_brackets = False

[tool:pytest]
testpaths = "pyvib" "docs"
# Skip pyvib/data to prevent importing the sample data (there are no tests in that dir anyway)
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "astropy_helpers" "examples" "pyvib[\/]data"
python_files = *_test.py

[run]
omit = *_test.py

[bumpversion:file:setup.py]

[bumpversion:file:pyvib/__init__.py]
